modules/ps_searchbar/ps_searchbar.css
#search_widget {
  margin-bottom: .625rem;
}
#search_widget form {
  position: relative;
  height: 38px;
}
#search_widget form i.search {
  position: absolute;
  left: 10px;
  top: 50%;
  transform: translateY(-50%);
  padding: 0;
  color: #7a7a7a;
  font-weight: bold;
  pointer-events: none;
  z-index: 1;
  font-size: 20px;
}
#search_widget form i.clear {
  position: absolute;
  right: 50px;
  top: 50%;
  transform: translateY(-50%);
  padding: 0;
  display: none;
}
#search_widget form input[type="text"] {
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 38px);
  height: 38px;
  padding: 0 10px 0 38px;
  outline: none;
  background-color: #fff;
  border: 1px solid #ee7a03;
  border-right: none;
  border-radius: 0;
  color: #000;
  font-family: 'Open Sans', sans-serif;
  font-weight: 400;
  box-sizing: border-box;
  -webkit-appearance: none;
  appearance: none;
}
#search_widget form input[type="text"]::placeholder {
  color: #b9b9b9;
}
#search_widget form .search-btn {
  position: absolute;
  top: 0;
  right: 0;
  height: 38px;
  width: 38px;
  border: 1px solid #ee7a03;
  border-left: none;
  background: url('/img/template/bt-rechercher.png') no-repeat center center;
  background-size: cover;
  padding: 0;
  margin: 0;
  cursor: pointer;
  border-radius: 0;
  box-sizing: border-box;
  -webkit-appearance: none;
  appearance: none;
}

.ui-autocomplete.searchbar-autocomplete {
  width: 100%;
  min-height: 100%;
  border: none;
}

.ui-autocomplete.searchbar-autocomplete li a, .ui-autocomplete.searchbar-autocomplete li a.ui-state-focus {
  padding: 8px 15px;
  overflow: auto;
  border: none;
  background: none;
  margin: auto;
  border-radius: 0;
}

.ui-autocomplete.searchbar-autocomplete li a:hover {
  background-color: #f1f1f1;
  cursor: pointer;
}

.ui-autocomplete.searchbar-autocomplete li a .autocomplete-thumbnail {
  float: left;
  width: 50px;
  height: auto;
  margin-right: 8px;
}

@media only screen and (min-width: 768px) {
  #search_widget {
    float: right;
    margin-bottom: 0;
  }

  .ui-autocomplete.searchbar-autocomplete {
    width: 400px;
    min-height: auto;
    left: auto;
  }
}

@media only screen and (min-width: 992px) {
  #search_widget {
    min-width: 16.5rem;
  }
}

